--- a/index.html
+++ b/index.html
@@ -9,37 +9,50 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <header style="background: linear-gradient(135deg, #434343, #000000); padding: 20px 0; box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);">
-    <div class="container d-flex justify-content-between align-items-center animate-on-load">
-      <h1 style="font-size: 2em; margin: 0; color: #00bcd4;">🏥 My Clinic</h1>
-      <nav>
-        <a href="index.html" style="color: #00bcd4; text-decoration: none; margin-left: 20px;" onmouseover="this.style.color='#fff'" onmouseout="this.style.color='#00bcd4'">Home</a>
-        <a href="doctors.html" style="color: #00bcd4; text-decoration: none; margin-left: 20px; transition: color 0.3s ease;" onmouseover="this.style.color='#fff'" onmouseout="this.style.color='#00bcd4'">Doctors</a>
-        <a href="appointments.html" style="color: #00bcd4; text-decoration: none; margin-left: 20px; transition: color 0.3s ease;" onmouseover="this.style.color='#fff'" onmouseout="this.style.color='#00bcd4'">Appointments</a>
-        <a href="contact.html" style="color: #00bcd4; text-decoration: none; margin-left: 20px; transition: color 0.3s ease;" onmouseover="this.style.color='#fff'" onmouseout="this.style.color='#00bcd4'">Contact</a>
-      </nav>
-    </div>
-  </header>
-
-  <section class="hero py-5 d-flex align-items-center justify-content-center" style="width: 100%;">
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
     <div class="container">
-      <h2 class="display-4 text-center">Welcome to My Clinic</h2>
-      <p class="lead text-center">Your health is our priority!</p>
-      <div class="text-center">
+      <a class="navbar-brand" href="index.html">🏥 My Clinic</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="doctors.html">Doctors</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="appointments.html">Appointments</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <section class="hero py-5 d-flex align-items-center justify-content-center">
+    <div class="container">
+      <h2 class="display-4 text-center animate-on-load">Welcome to My Clinic</h2>
+      <p class="lead text-center animate-on-load anim-delay-1">Your health is our priority!</p>
+      <div class="text-center animate-on-load anim-delay-2">
         <a href="appointments.html" class="btn btn-primary">Book Appointment</a>
       </div>
     </div>
   </section>
 
-  <footer style="background: linear-gradient(135deg, #434343, #000000); color: #00bcd4; text-align: center; padding: 20px 0; font-size: 0.9em; position: fixed; bottom: 0; left: 0; width: 100%; box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.2);">
+  <!-- Footer -->
+  <footer class="footer-custom">
     <div class="container">
       <p>© 2025 My Clinic. All Rights Reserved.</p>
     </div>
   </footer>
-</body>
-</html>
-  </section>
-  <!-- Footer -->
-  <?php include 'footer.html'; ?>
+
+  <!-- Bootstrap JS Bundle -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
